# agentcpp

./: CMakeLists.txt  README.md  vcpkg.json
include/: agent.hpp  agent_session.hpp  chat_provider.hpp  openrouter_client.hpp  tool_context.hpp  tools.hpp
src/: agent.cpp  agent.hpp  agent_session.cpp  main.cpp  openrouter_client.cpp  openrouter_provider.cpp  openrouter_provider.hpp  tools.cpp  tools.hpp
src/config/: config.cpp  config.hpp
src/tools/: bash.cpp  read.cpp  write.cpp
src/tools/include/: bash.h  read.h  tool.hpp  write.h
src/tui/: tui_app.cpp  tui_app.hpp
